PROJECT(dxnet)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_DEFINITIONS(-std=c++14)
SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(framework)
ADD_SUBDIRECTORY(network_adapter)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main public mainloop public thread pthread)

ADD_EXECUTABLE(adapterd adapterd.cpp)
