PROJECT(dxnet)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_DEFINITIONS(-std=c++14)
SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--export-all-symbols")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ ${PROJECT_SOURCE_DIR}/third_party/libevent/include/)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(framework)
ADD_SUBDIRECTORY(network_adapter)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib ${PROJECT_SOURCE_DIR}/third_party/libevent/lib/)
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main framework pthread event)

ADD_EXECUTABLE(adapterd adapterd.cpp)
TARGET_LINK_LIBRARIES(adapterd framework pthread event)
