PROJECT(dxnet)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(./main_loop DIR_SRCS)
AUX_SOURCE_DIRECTORY(./public DIR_SRCS)
AUX_SOURCE_DIRECTORY(./thread DIR_SRCS)
AUX_SOURCE_DIRECTORY(./channel DIR_SRCS)
AUX_SOURCE_DIRECTORY(./messenger DIR_SRCS)
AUX_SOURCE_DIRECTORY(./networking DIR_SRCS)
AUX_SOURCE_DIRECTORY(./string DIR_SRCS)

ADD_LIBRARY(framework SHARED ${DIR_SRCS})
